# whiteboard

./: Cargo.toml  README.md
.cargo/: config.toml
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx
src/: config.rs  main.rs
src/board/: board.rs  mod.rs
src/models/: board.rs  mod.rs  room.rs
src/room/: manager.rs  mod.rs  room.rs
src/routes/: mod.rs  root.rs  ws.rs
