[package]
name = "meet-sfu"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 2 

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
confy = {version = "1.0", features = ["toml_conf"]}
axum = {version = "0.8"}
tokio = {version = "1", features = ["full"]}
socketioxide = {version = "0.17"}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}
tower = {version = "0.5"}
tower-http = { version = "0.6", features = ["cors", "fs"] }
figment = {version = "0.10", features = ["toml"]}